--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeniorDesignProject">
         <activity
+            android:name=".AnimalsAdd"
+            android:exported="false"
+            android:parentActivityName=".Animals"/>
+        <activity
             android:name=".WeatherForecast"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".NewCalendarEvent"
             android:exported="false"
