Can now display additional features in detailed activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeniorDesignProject">
         <activity
-            android:name=".AnimalsAdd"
+            android:name=".AnimalsDetailed"
             android:exported="false"
             android:parentActivityName=".Animals"/>
+        <activity
+            android:name=".AnimalsAdd"
+            android:exported="false"
+            android:parentActivityName=".Animals" />
         <activity
             android:name=".WeatherForecast"
             android:exported="false"
