Can now edit additional features Can now add new features from detailed activity - With full database conneciton

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeniorDesignProject">
         <activity
+            android:name=".AnimalsDetailedEdit"
+            android:exported="false"
+            android:parentActivityName=".AnimalsDetailed"/>
+        <activity
             android:name=".AnimalsDetailed"
             android:exported="false"
-            android:parentActivityName=".Animals"/>
+            android:parentActivityName=".Animals" />
         <activity
             android:name=".AnimalsAdd"
             android:exported="false"
