Fixed few bugs - Can now delete animal fields - Added extra features too

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".NewCalendarEvent"
+            android:name=".CalendarNewEvent"
             android:exported="false"
             android:parentActivityName=".Calendar" />
         <activity
