Added To-Do list that displays events for selected field - Fixed few bugs - Re designed some of the toolbars

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeniorDesignProject">
         <activity
+            android:name=".AnimalsToDo"
+            android:exported="false"
+            android:parentActivityName=".AnimalsDetailed"/>
+        <activity
             android:name=".CalendarEventDetails"
             android:exported="false"
-            android:parentActivityName=".Calendar"/>
+            android:parentActivityName=".Calendar" />
         <activity
             android:name=".AnimalsDetailedEdit"
             android:exported="false"
