Can now create general notes and field specific notes - Can view all of the notes from general notes section - Can create a note for any type of field from general notes section - Can auto fill inputs according to which activity user came

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeniorDesignProject">
         <activity
+            android:name=".NotesGeneral"
+            android:exported="false"
+            android:parentActivityName=".Agenda"/>
+        <activity
             android:name=".NotesNew"
             android:exported="false" />
         <activity
