Started to design UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SeniorDesignProject">
+        android:theme="@style/Theme.SeniorDesignProject"
+        android:hardwareAccelerated="true"
+        >
         <activity
             android:name=".CropsDetailedEdit"
             android:exported="false" />
